--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.bdg91.tello</groupId>
     <artifactId>tello-java-driver</artifactId>
-    <version>v0.10.2-beta</version>
+    <version>v1.0.0</version>
 
     <dependencies>
         <dependency>
